54 First implementation of an item service endpoint
