# docs/swagger.json
@@ -11,12 +11,13 @@
     }
   ],
   "paths": {
-    "/{universe}/itemstack/{name}": {
-      "get": {
+    "/{universe}/items/id": {
+      "put": {
         "tags": [
           "item-service"
         ],
-        "operationId": "itemStack",
+        "summary": "Updates an object in the database",
+        "operationId": "update",
         "parameters": [
           {
             "name": "universe",
@@ -25,9 +26,145 @@
             "schema": {
               "type": "string"
             }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "oneOf": [
+                  {
+                    "$ref": "#/components/schemas/Item"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Armor"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Jewellery"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Shield"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Weapon"
+                  }
+                ]
+              }
+            }
           },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Item"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Armor"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Jewellery"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Shield"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Weapon"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Inserts an object into the database",
+        "operationId": "insert",
+        "parameters": [
           {
-            "name": "name",
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "oneOf": [
+                  {
+                    "$ref": "#/components/schemas/Item"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Armor"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Jewellery"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Shield"
+                  },
+                  {
+                    "$ref": "#/components/schemas/Weapon"
+                  }
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Item"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Armor"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Jewellery"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Shield"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Weapon"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/{universe}/items/all": {
+      "get": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Get all objects from the database",
+        "operationId": "getAll_1",
+        "parameters": [
+          {
+            "name": "universe",
             "in": "path",
             "required": true,
             "schema": {
@@ -41,7 +178,185 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/ItemStackItem"
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Item"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Armor"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Jewellery"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Shield"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Weapon"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Get all objects with the given ids from the database",
+        "operationId": "getAll",
+        "parameters": [
+          {
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ObjectId"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Item"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Armor"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Jewellery"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Shield"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Weapon"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Get all objects with the given ids from the database",
+        "operationId": "deleteAll",
+        "parameters": [
+          {
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ObjectId"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      }
+    },
+    "/{universe}/items/all/named": {
+      "post": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Get all objects with the given names from the database",
+        "operationId": "getAllByName",
+        "parameters": [
+          {
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Item"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Armor"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Jewellery"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Shield"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Weapon"
+                      }
+                    ]
+                  }
                 }
               }
             }
@@ -49,13 +364,92 @@
         }
       }
     },
-    "/{universe}/item/{name}": {
+    "/{universe}/items/all/insert": {
+      "post": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Inserts the objects into the database",
+        "operationId": "insertAll",
+        "parameters": [
+          {
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Item"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Armor"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Jewellery"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Shield"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Weapon"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Item"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Armor"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Jewellery"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Shield"
+                      },
+                      {
+                        "$ref": "#/components/schemas/Weapon"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/{universe}/items/named/{name}": {
       "get": {
         "tags": [
           "item-service"
         ],
-        "summary": "Get an item",
-        "operationId": "getItem",
+        "summary": "Get an object from the database",
+        "operationId": "getByName",
         "parameters": [
           {
             "name": "universe",
@@ -104,13 +498,13 @@
         }
       }
     },
-    "/{universe}/a/{name}": {
+    "/{universe}/items/id/{id}": {
       "get": {
         "tags": [
           "item-service"
         ],
-        "summary": "Get an item",
-        "operationId": "getItem_1",
+        "summary": "Get an object from the database",
+        "operationId": "get",
         "parameters": [
           {
             "name": "universe",
@@ -121,7 +515,7 @@
             }
           },
           {
-            "name": "name",
+            "name": "id",
             "in": "path",
             "required": true,
             "schema": {
@@ -155,6 +549,36 @@
                 }
               }
             }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "item-service"
+        ],
+        "summary": "Deletes an object from the database",
+        "operationId": "delete",
+        "parameters": [
+          {
+            "name": "universe",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
           }
         }
       }
@@ -239,34 +663,6 @@
           },
           "note": {
             "type": "string"
-          }
-        }
-      },
-      "ItemStackItem": {
-        "type": "object",
-        "properties": {
-          "amount": {
-            "type": "number",
-            "format": "float"
-          },
-          "item": {
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Item"
-              },
-              {
-                "$ref": "#/components/schemas/Armor"
-              },
-              {
-                "$ref": "#/components/schemas/Jewellery"
-              },
-              {
-                "$ref": "#/components/schemas/Shield"
-              },
-              {
-                "$ref": "#/components/schemas/Weapon"
-              }
-            ]
           }
         }
       },
